variables.Variables.scala.code

var cpt : int = 0
while(!isOverBaggle()){
  forward()
  var cpt = cpt + 1
}
pickupBaggle()
